# app-framework-binder

./: .gitignore  .gitreview  CMakeLists.txt  Makefile  README.md  afb-daemon.pc.in  libafbwsc.pc.in
bindings/audio/: CMakeLists.txt  audio-alsa.h  audio-api.c  audio-api.h  audio-pulse.c
bindings/intrinsics/: CMakeLists.txt  afb-dbus-binding.c
bindings/media/: CMakeLists.txt  media-api.c  media-api.h  media-rygel.c  media-rygel.h
bindings/radio/: CMakeLists.txt  radio-api.c  radio-api.h  radio-rtlsdr.c
bindings/samples/: AuthLogin.c  CMakeLists.txt  DemoContext.c  DemoPost.c  HelloWorld.c  tic-tac-toe.c
doc/: FAQ.html  FAQ.md  README.html  README.md  afb-application-writing.html  afb-application-writing.md  afb-bindings-overview.html  afb-bindings-overview.md  afb-bindings-writing.html  afb-bindings-writing.md  afb-daemon-vocabulary.html  afb-daemon-vocabulary.md  afb-daemon.html  afb-daemon.md  afb-events-guide.html  afb-events-guide.md  afb-overview.html  afb-overview.md  afb-plugin-writing.html  afb-plugin-writing.md  afb-plugins-overview.html  afb-plugins-overview.md  afb-tests-overview.html  afb-tests-overview.md  doc.css  updt.sh  writing-afb-plugins.html  writing-afb-plugins.md
doc/nbproject.template/: configurations.xml
doc/nbproject.template/private/: .gitignore
include/: CMakeLists.txt  afb-evmgr-itf.h  afb-plugin.h  afb-poll-itf.h  afb-pollmgr-itf.h  afb-req-itf.h  local-def.h  proto-def.h
include/afb/: afb-binding.h  afb-event-itf.h  afb-event-sender-itf.h  afb-evmgr-itf.h  afb-plugin.h  afb-req-itf.h  afb-service-itf.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
plugins/: CMakeLists.txt
plugins/afm-main-plugin/: CMakeLists.txt  afm-main-plugin.c  utils-jbus.c  utils-jbus.h  utils-sbus.c  utils-sbus.h
plugins/audio/: CMakeLists.txt  audio-alsa.c  audio-alsa.h  audio-api.c  audio-api.h  audio-pulse.c  audio-pulse.h
plugins/intrinsics/: CMakeLists.txt  afb-dbus-binding.c
plugins/media/: CMakeLists.txt  media-api.c  media-api.h  media-rygel.c  media-rygel.h
plugins/radio/: CMakeLists.txt  radio-api.c  radio-api.h  radio-rtlsdr.c  radio-rtlsdr.h
plugins/samples/: AuthLogin.c  CMakeLists.txt  CMakeLists.txt2  ClientCtx.c  HelloWorld.c  SamplePost.c  tic-tac-toe.c
plugins/session/: CMakeLists.txt  export.map  token-api.c
src/: CMakeLists.txt  SamplePost.c  TODO  afb-api-dbus.c  afb-api-dbus.h  afb-api-so.c  afb-api-so.h  afb-api-ws.c  afb-api-ws.h  afb-api.c  afb-apis.c  afb-apis.h  afb-client-demo.c  afb-common.c  afb-common.h  afb-config.h  afb-context.c  afb-context.h  afb-evt.c  afb-evt.h  afb-hook.c  afb-hook.h  afb-hreq.c  afb-hreq.h  afb-hsrv.c  afb-hsrv.h  afb-hswitch.c  afb-hswitch.h  afb-method.c  afb-method.h  afb-msg-json.c  afb-msg-json.h  afb-plugins.c  afb-plugins.h  afb-req-itf.h  afb-rest-api.c  afb-sig-handler.c  afb-sig-handler.h  afb-subcall.c  afb-subcall.h  (+38 more)
src/tests/: test-locale-root.sh  test-thread.c  test-thread.sh
test/: AFB.html  AFB.js  AfbAngular.js  angular.html  client-ctx.html  hello-world.html  index.html  sample-post.html  test-dbus-rawcall.html  token-websock.qml  websock.html  websock.js
